@@ -98,10 +98,6 @@ module Net
     #     ssh.loop
     #   end
     #
-    # NB: If the +user+ parameter is omitted or nil, then the username of the
-    #     process used to invoke Net::SSH.start is used, instead (via
-    #     Etc.getlogin).
-    #
     # This method accepts the following options (all are optional):
     #
     # * :auth_methods => an array of authentication methods to try
@@ -192,6 +188,9 @@ module Net
     #   password auth method
     # * :non_interactive => non interactive applications should set it to true
     #   to prefer failing a password/etc auth methods vs asking for password
+    #
+    # If +user+ parameter is nil it defaults to USER from ssh_config, or
+    # local username
     def self.start(host, user=nil, options={}, &block)
       invalid_options = options.keys - VALID_OPTIONS
       if invalid_options.any?
